# captionnest

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  CaptionNest.cmd  DESIGN.md  README.md  SECURITY.md  SubLingo Local.cmd  THIRD_PARTY_NOTICES.md  design-qa.md  pyproject.toml  pytest.ini
.github/: release.yml
.opc/: acceptance.md  project.json  project.md
.ui-style-director/: recommended-components.json  selected-style.json  source-attribution.json
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: main.rs
apps/desktop/windows/: installer-hooks.nsh  installer.nsi  model-retention-policy.nsh
apps/sidecar/: LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
apps/sidecar/src/sublingo_local/: __init__.py  __main__.py  app.py  batch_store.py  batches.py  job_repository.py  job_store.py  jobs.py  media.py  model_manager.py  models.py  scheduler.py  storage.py  subtitles.py  system.py
apps/sidecar/src/sublingo_local/asr/: __init__.py  base.py  diagnostics.py  faster_whisper.py  qwen3_asr.py  retry.py  timestamp_normalization.py
apps/sidecar/src/sublingo_local/translation/: __init__.py  base.py  codex.py  common.py  factory.py  openai_compatible.py
apps/sidecar/tests/: test_api.py  test_asr_diagnostics.py  test_asr_retry.py  test_batch_api.py  test_faster_whisper.py  test_model_manager.py  test_pipeline.py  test_scheduler.py  test_timestamp_normalization.py  test_translation.py
docs/: architecture.md  asr-diagnostics.md  brand.md  code-review.md  design-spec.md  development.md  release.md  timestamp-normalization.md  user-guide.md
licenses/: GPL-3.0-or-later.txt  LGPL-2.1-or-later.txt  LGPL-3.0-or-later.txt  MIT.txt  PyAV-BSD-3-Clause.txt  Python-PSF.txt
packaging/: captionnest-sidecar.spec  sidecar_entry.py
scripts/: build-desktop.ps1  build-media-wheel.ps1  build-sidecar.ps1  check-media-license.ps1  check-release-tag-ruleset.ps1  check-release-workflow-contract.ps1  check-version-consistency.ps1  dev-desktop.ps1  dev.ps1  install-media-wheel.ps1  run.ps1  serve.ps1  setup.ps1  smoke-test-installer.ps1  stop-local-services.ps1  test-installer-model-retention.ps1
src-tauri/: Cargo.toml  tauri.conf.json
tests/: test_api.py  test_desktop_packaging.py  test_environment.py  test_model_manager.py  test_pipeline.py  test_qwen_asr.py  test_release_version.py  test_release_workflow.py  test_runtime_hardening.py  test_subtitles.py  test_translation.py
tooling/: __init__.py
web/: index.html  (+2 more)
(+117 files in other folders)
