[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sublingo-local"
version = "0.1.0"
description = "Local-first video transcription and Chinese subtitle translation service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109,<1",
  "httpx[socks]>=0.27,<1",
  "pydantic>=2.6,<3",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.27,<1",
]

[project.optional-dependencies]
asr = ["faster-whisper>=1.1,<2"]
dev = [
  "pytest>=7.4,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
]

[project.scripts]
sublingo-local = "sublingo_local.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
